  BugFix: Highlight ShowUnInstDetails keyword for NSIS files (#2084879)
  BugFix: Displayed a blank time when file last modified time is 00:00:00
   (#2098626)
  BugFix: Customized colors weren't used in some areas (#2110218)
  BugFix: Zip files were extracted into wrong folder (#2110350)
  BugFix: Case-sensitive regexp search didn't work (#1991259)
  Translation updates:
  - German (r5934)
  - Russian (#2067785)
  - Swedish (#2075513)

WinMerge 2.11.1.4 - 2008-08-21 (r5846)
  Binary file edit/compare (#2036603)
  Add wait cursor for undo and redo (#2039228)
  Add icon for "Open Conflict File" menu item (#2047054)
  Include unique subfolder contents in recursive folder compare (#2034259)
  Installer: Use -u switch in TortoiseSVN command line (#2060782)
  Add icon for "Plugins->List" menu item (#2060771)
  BugFix: External editor command line switches did not work (#2037862)
  BugFix: Deleting/Moving file crashed WinMerge in debugger (#2025833)
  Bugfix: Lost focus after folder compare operations (#2046002)
  Bugfix: Some files had folder icons when aborting folder compare (#2018836)
  BugFix: Didn't select word-diff cyclically by pressing F4 key (#1989858)
  BugFix: Could not reset EOL ignore after selecting it from query
   dialog (#2056741)
  Translation updates:
  - Brazilian (#2059836)
  - German (#2045666)
  - Greek (#2062442)
  - Chinese Traditional (#2039929)
  - Japanese (r5805)
  - Swedish (#2062107)

WinMerge 2.11.1.3 - 2008-08-04 (r5733)
  Rename color scheme menu item "None" and add separator (#2027300)
  Add -u commandline parameter as alternative to -ub (#2029275, #2030359)
  Remove RCLocalizationHelper plugin (#2029457)
  Clarify Supercopier caused hang in release notes (#2030040)
  Improve tree mode in folder compare (#2018836)
  Unlimited undo (#2033754)
  BugFix: Could change syntax highlight mode when highlighting was
    disabled from options (#2027325)
  BugFix: Editing line filters updated wrong filter (#2025130)